<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PocSecured.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:popupTheme="@style/Theme.PocSecured.PopupOverlay">

            <ImageView
                android:id="@+id/toolbar_drawer_icon"
                style="@style/ToolbarIcon"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/toolbar_drawer_text"
                style="@style/ToolbarText"
                tools:text="Test title"
                android:layout_toEndOf="@+id/toolbar_drawer_icon" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_home" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>